# netwatch

./: pyproject.toml
alembic/: env.py
alembic/versions/: 407d6aa4d5a4_facebook.py
netwatch/: __main__.py
netwatch/core/: config.py  database.py  watcher.py
netwatch/models/: facebook.py
netwatch/watchers/: facebook.py
